Correction of NaN error inthe countdown on ios devices and fixing of image responsivesnes using tailwindCSS

--- a/CSS/output.css
+++ b/CSS/output.css
@@ -552,24 +552,17 @@ video {
   display: flex;
 }
 
-.h-screen {
-  height: 100vh;
+.size-full {
+  width: 100%;
+  height: 100%;
 }
 
 .min-h-screen {
   min-height: 100vh;
 }
 
-.flex-row {
-  flex-direction: row;
-}
-
 .flex-col {
   flex-direction: column;
-}
-
-.flex-nowrap {
-  flex-wrap: nowrap;
 }
 
 .items-center {
@@ -656,12 +649,13 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:flex-row {
-    flex-direction: row;
+  .md\:size-1\/2 {
+    width: 50%;
+    height: 50%;
   }
 
-  .md\:flex-wrap {
-    flex-wrap: wrap;
+  .md\:flex-row {
+    flex-direction: row;
   }
 
   .md\:items-center {
